--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec tsx watch src/index.ts",
+    "start": "node dist/index.js",
     "postinstall": "prisma generate"
   },
   "prisma": {
